# LVGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
gui/: gui.h  gui.mk
lvgl_src/: CMakeLists.txt  main.c
lvgl_src/gui/: CMakeLists.txt
